syntax = "proto3";

package proto;

option go_package = "rusve/proto";

import "users.proto";
import "utils.proto";
import "notes.proto";
import "posts.proto";

message Empty {}
message UserId {
    string userId = 1;
}
message UserIds {
    repeated string userIds = 1;
}

service UsersService {
    rpc Auth(AuthRequest) returns (User) {}
    rpc GetUsers(UserIds) returns (stream User) {}
    rpc GetUser(UserId) returns (User) {}
    rpc CreateUser(User) returns (User) {}
}

service UtilsService {
    rpc GetFiles(TargetId) returns (stream File) {}
    rpc GetFile(FileId) returns (File) {}
    rpc CreateFile(File) returns (File) {}
    rpc DeleteFile(FileId) returns (File) {}
}

service NotesService {
    rpc GetNotes(UserId) returns (stream Note) {}
    rpc GetOnlyNotes(UserId) returns (stream Note) {}
    rpc CreateNote(Note) returns (Note) {}
    rpc DeleteNote(NoteId) returns (Note) {}
}

service PostsService {
    rpc GetPosts(Empty) returns (stream Post) {}
    rpc CreatePost(Post) returns (Post) {}
    rpc DeletePost(PostId) returns (Post) {}
}
